--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,10 +54,10 @@ footer {
 }
 
 .parallax {
-  perspective: 1px;
   height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
+  perspective: 400px; // changed this so that the pictures aren't tiny
 }
 .parallax__layer {
   position: absolute;
@@ -68,7 +68,29 @@ footer {
 }
 .parallax__layer--base {
   transform: translateZ(0);
+  z-index: 4;
 }
 .parallax__layer--back {
-  transform: translateZ(-10px);
+  transform: translateZ(-600px) scale(3);
+  z-index: 3;
+}
+.parallax__group {
+  position: relative;
+  height: 500px;
+  height: 100vh;
+  transform-style: preserve-3d;
+}
+/* The following are the various groups that we can
+seperate the different temples. */
+#group1 {
+  z-index: 1;
+}
+#group2 {
+  z-index: 2;
+}
+#group3 {
+  z-index: 3;
+}
+#group4 {
+  z-index: 4;
 }
