--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -3,7 +3,7 @@ html {
   overflow: hidden;
 }
 
-body { 
+body {
   margin:0;
   padding:0;
   perspective: 1px;
@@ -58,10 +58,13 @@ img:last-of-type {
 }
 
 .title {
+  color: #141313;
   width: 25%;
   padding: 5%;
   border-radius: 5px;
-  background: rgba(240,230,220, .7);
+  /*background-color: rgba(102,102,102, .7);*/
+  background: #666 url("../images/MoroniMod.png") no-repeat center;
+  text-shadow: 0px 1px 0px rgba(90,85,85,.8);
   box-shadow: 0 0 8px rgba(0, 0, 0, .7);
   text-align: center;
 }
@@ -71,8 +74,13 @@ img:last-of-type {
   margin-right: 0;
 }
 
+.slide:nth-child(2n+1) .title {
+  margin-left: auto;
+  margin-right: 0;
+}
+
 .slide, .slide:before {
-  background: 50% 50% / cover;  
+  background: 50% 50% / cover;
 }
 
 .header {
@@ -82,15 +90,32 @@ img:last-of-type {
   text-shadow: 0 5px 2px #000;
 }
 
+.header h1 {
+  background-color: rgba(240, 240, 240, 0.5);
+  border-radius: 10px;
+}
+
 #title {
   background-image: url("../images/collage.jpg");
-   background-attachment: fixed;  
+   background-attachment: fixed;
 }
 
 #payson:before {
   background-image: url("../images/payson.jpg");
   transform: translateZ(-1px) scale(2);
   z-index:-1;
+}
+
+#timp:before {
+  background-image: url("../images/timp2.jpg");
+  transform: translateZ(-1px) scale(2);
+  z-index: -1;
+}
+
+#logan:before {
+  background-image: url("../images/logan.jpg");
+  transform: translateZ(-1px) scale(2);
+  z-index: -1;
 }
 
 #thumbnails {
@@ -111,5 +136,5 @@ img:last-of-type {
   color: white;
   font-family: "Arial Black";
   font-size: 150%;
-  text-shadow: -10px 10px 2px rgba(0,0,255,.8);
+  text-shadow: 3px 3px 2px rgba(204,204,204,.8);
 }
