--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,35 +1,6 @@
 body {
-  padding-top: 60px;
   background-color: #dddddd;
   color: #104C65;
-}
-
-.main {
-  border-style: solid;
-  border-color: #cccccc;
-  border-width: normal;
-  background-color: #C4C2C2;
-}
-
-.left {
-  //background-color: #BF4458;
-}
-
-.center {
-  //background-color: #7F7E58;
-}
-
-.right {
-  //background-color: #FEF735;
-}
-
-.photo {
-  background-color: #BF4453;
-  border-style: solid;
-  border-color: #FEF735;
-  border-width: thin;
-  margin-left: 5px;
-  margin-right: 5px;
 }
 
 img {
@@ -37,34 +8,21 @@ img {
   border-width: thin;
   border-color: #CCCCCC;
 }
-
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  background-color: #C4C2C2;
-  border-top: solid;
-  border-color: #CCCCCC;
-  border-width: normal;
+.first {
+  top: 50%;
 }
-
-.footer p {
-  margin-top: 10px;
-}
-
 .parallax {
   height: 100vh;
   overflow-x: hidden;
-  overflow-y: auto;
-  perspective: 400px; // changed this so that the pictures aren't tiny
+  overflow-y: visible;
+  perspective: 100px; // changed this so that the pictures aren't tiny
 }
 .parallax__layer {
   position: absolute;
-  top: 0;
+  top: 50%;
   right: 0;
   bottom: 0;
-  left: 0;
+  left: 50%;
 }
 .parallax__layer--base {
   transform: translateZ(0);
